--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -4,6 +4,7 @@ What is a recursive function? What are "cases" that exist in recursive functions
 
 # Answer
 
+A recursive function is a function that calls itself many times over before returning a final result. Recursive functions have two cases, a base case which stops the function from calling itself infinitely and a recursive case which is where the function calls itself.
 
 # Teacher Feedback
 
