--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -4,6 +4,7 @@ What are the benefits of writing functions recursively? What are the drawbacks?
 
 # Answer
 
+Recursive functions take more memory and run slower because of the function calls but they can be easier or quicker to read or write.
 
 # Teacher Feedback
 
