--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -4,6 +4,7 @@ What type of problems are best solved using recursion?
 
 # Answer
 
+The best type of problems to be solved with recursion are the problems that can be broken down into smaller pieces of the same.
 
 # Teacher Feedback
 
