--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -7,5 +7,5 @@ What is a recursive function? What are "cases" that exist in recursive functions
 A recursive function is a function that calls itself many times over before returning a final result. Recursive functions have two cases, a base case which stops the function from calling itself infinitely and a recursive case which is where the function calls itself.
 
 # Teacher Feedback
-
-X/3 Points
+Great answer!
+3/3 Points
