--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -7,5 +7,5 @@ What type of problems are best solved using recursion?
 The best type of problems to be solved with recursion are the problems that can be broken down into smaller pieces of the same.
 
 # Teacher Feedback
-
-X/3 Points
+Nice!
+3/3 Points
